--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </p>
         <ul class="d-md-flex justify-content-center">
           <li class="card clickable-card">
-            <a class="p-4 pt-6 clickable-card__link" href="https://doctorcareamerica.com/start-your-free-trial">
+            <a class="p-4 pt-6 clickable-card__link" href="https://doctorcareamerica.com/join-today/">
               <h3 class="card-title text-muted">Monthly Membership</h3>
               <div class="clickable-card__main-content">
                 <div class="card__price"><b>$16.95</b>/mo</div>
@@ -27,7 +27,7 @@
             </a>
           </li>
           <li class="card clickable-card">
-            <a class="p-4 pt-6 clickable-card__link" href="https://doctorcareamerica.com/start-your-free-trial/" data-track-click="{&quot;target&quot;: &quot;ProPlanCard&quot;, &quot;plan_type&quot;:&quot;6 Month Subscription&quot;}">
+            <a class="p-4 pt-6 clickable-card__link" href="https://doctorcareamerica.com/join-today/">
                 <div class="card__banner"> Best Value </div>
               <h3 class="card-title text-muted">Annual Membership</h3>
               <div class="clickable-card__main-content">
