DS-67 add @media css for smaller screens.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Membership Plans</title>
-    <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/pricing_plans_reset.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/pricing_plans_style.css">
   </head>
   <body>
     <section class="pricingPlan text-center">
@@ -14,7 +14,7 @@
         </p>
         <ul class="d-md-flex justify-content-center">
           <li class="card clickable-card">
-            <a class="p-4 pt-6 clickable-card__link" href="https://doctorcareamerica.com/join-today/">
+            <a class="p-4 pt-6 clickable-card__link" href="join-today">
               <h3 class="card-title text-muted">Monthly Membership</h3>
               <div class="clickable-card__main-content">
                 <div class="card__price"><b>$16.95</b>/mo</div>
@@ -27,7 +27,7 @@
             </a>
           </li>
           <li class="card clickable-card">
-            <a class="p-4 pt-6 clickable-card__link" href="https://doctorcareamerica.com/join-today/">
+            <a class="p-4 pt-6 clickable-card__link" href="join-today?plan=annual_146_95">
                 <div class="card__banner"> Best Value </div>
               <h3 class="card-title text-muted">Annual Membership</h3>
               <div class="clickable-card__main-content">
